--- a/pancake_shop/style.css
+++ b/pancake_shop/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Playfair Display', serif;
   background-image: url(images/backGround.webp);
@@ -12,8 +19,19 @@ body {
   margin: 0;
 }
 
+p {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+h2, h3 {
+  margin-bottom: 1rem;
+  font-family: 'Playfair Display', serif;
+}
+
 .customization-section,
-select {
+select,
+.confirm-container {
   font-family: 'Alice', serif;
 }
 
@@ -21,7 +39,7 @@ select {
   background-color: #fff8f0;
   display: flex;
   justify-content: center;
-  width: 60vw;
+  width: 55vw;
   border-radius:20px ;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -36,20 +54,18 @@ select {
   height: 100%;
   max-width: 400px;
   border-radius: 20px;
-}
-
-img {
   position: absolute;
   visibility: hidden;
-}
-
-.imageDefault {
-  visibility: visible;
 }
 
 .form-container {
   flex: 1;
   padding: 20px;
+  display: none;
+  height: 60vh;
+  /* display: flex; */
+  /* flex-direction: column;
+  justify-content: center; */
 }
 
 .price-banner {
@@ -60,14 +76,23 @@ img {
   background-color: brown;
   color: white;
   border-radius: 50%;
-  width: 30%;
-  height: 30%;
+  width: 8rem;
+  height: 8rem;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 40px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
+.button {
+  width: 10rem;
+}
+
+.button:hover {
+  cursor: url("images/cursor.png"), pointer;
+}
+
 
 /* Checkbox customizing */
 .checkBoxContainer {
@@ -102,6 +127,7 @@ img {
 
 .checkBoxContainer:hover input ~ .checkBox {
   box-shadow: 0px 0px 5px red;
+  cursor: url("images/cursor.png"), pointer;
 }
 
 .checkBoxContainer input:checked ~ .checkBox {
@@ -112,10 +138,30 @@ img {
 
 .checkBoxContainer:hover input:checked ~ .checkBox {
   box-shadow: 0px 0px 5px green;
+  cursor: url("images/cursor.png"), pointer;
 }
 
 .checkBoxContainer input:checked ~ .checkBox .vCheck{
   display: block;
+}
+
+/* confirmation tab customization */
+.confirm-container {
+  flex: 1;
+  padding: 20px;
+  height: 60vh;
+/* display: none; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.confirm-container p {
+      margin-bottom: 1rem;
+}
+
+.confirm-container h2 {
+  margin-bottom: 0;
 }
 
 @media (max-width: 768px) {
