--- a/pancake_shop/style.css
+++ b/pancake_shop/style.css
@@ -120,8 +120,8 @@ select,
   position: relative;
   height: 100%;
   width: 100%;
-  visibility: visible;
-  display: none;
+  visibility: hidden;
+  display: block;
 }
 
 .checkBoxContainer:hover {
@@ -143,10 +143,15 @@ select,
 }
 
 .checkBoxContainer input:checked ~ .checkBox .vCheck{
-  display: block;
+  visibility: visible;
 }
 
 /* confirmation tab customization */
+#backToOrder:hover {
+  cursor: url("images/cursor.png"), pointer;
+  color: red;
+}
+
 .confirm-container {
   flex: 1;
   padding: 20px;
@@ -158,7 +163,7 @@ select,
 }
 
 .confirm-container p {
-      margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .confirm-container h2 {
