--- a/country_info/style.css
+++ b/country_info/style.css
@@ -7,6 +7,26 @@
     color: #05112C;
 }
 
+h1 {
+    margin-left: 2rem;
+}
+
+h1 img {
+    height: 2.5rem;
+    margin: 1rem;
+}
+
+h1,
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 30px;
+}
+
+h3 {
+        font-family: 'Oswald', sans-serif;
+}
+
+
 body {
     font-family: 'Old Standard TT', serif;
     background: #3E92CC;
@@ -39,34 +59,27 @@ main {
     border-radius: 1rem;
 }
 
-h1 {
-    margin-left: 2rem;
-}
-
-h1 img {
-    height: 2.5rem;
-    margin: 1rem;
-}
-
-h1,
-h2 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 30px;
-}
-
-h3 {
-        font-family: 'Oswald', sans-serif;
-}
-
 ul {
     list-style-type: none;
     padding: 2rem;
 }
 
+.region_select {
+    display: flex;
+    flex-direction: row;
+}
+
+.region_select h2 {
+    flex: 1;
+    border: 1px solid black;
+    text-align: center;
+    padding: 0.5rem;
+}
+
 .flagContainer {
-        background: #E5E1E5;
-        box-shadow: 0px 0px 5px rgb(204, 204, 204);
-        border-radius: 1rem;
+    background: #E5E1E5;
+    box-shadow: 0px 0px 5px rgb(204, 204, 204);
+    border-radius: 1rem;
         overflow: hidden;
 }
 
