--- a/country_info/style.css
+++ b/country_info/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@0;1&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
+/* universal elements */
+
 * {
     padding: 0;
     margin: 0;
@@ -26,6 +28,12 @@ h3 {
         font-family: 'Oswald', sans-serif;
 }
 
+ul {
+    list-style-type: none;
+    padding: 2rem;
+}
+
+/* main sections container */
 
 body {
     font-family: 'Old Standard TT', serif;
@@ -59,10 +67,16 @@ main {
     border-radius: 1rem;
 }
 
-ul {
-    list-style-type: none;
-    padding: 2rem;
+.bannerSection,
+.infoSection,
+.mapSection,
+.bannerNameContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+/* region select or region nav */
 
 .region_select {
     display: flex;
@@ -80,6 +94,8 @@ ul {
 .region_select_button:hover {
     filter: drop-shadow(0px 0px 2px #3E92CC);
 }
+
+/* country selection sections */
 
 .flagContainer {
     background: #E5E1E5;
@@ -115,14 +131,7 @@ li img {
     height: fit-content;
 }
 
-.bannerSection,
-.infoSection,
-.mapSection,
-.bannerNameContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+/* button */
 
 .closeButton {
     width: 4rem;
@@ -140,6 +149,8 @@ li img {
 .material-symbols-outlined {
     font-size: 5rem !important;
 }
+
+/* country info section */
 
 .flagAndCoaContainer {
     display: grid;
@@ -191,6 +202,8 @@ li img {
     font-size: 20px;
 }
 
+/* footer */
+
 footer {
     display: flex;
     background: #FFFAFF;
@@ -199,3 +212,5 @@ footer {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+
+/* media for mobile adaptive */
