--- a/cars_databases/style.css
+++ b/cars_databases/style.css
@@ -14,7 +14,7 @@ main {
     background-color: white;
     border-radius: 0.5rem;
     display: flex;
-    margin-bottom: 3rem;
+    flex-direction: column;
 }
 
 .add_car,
@@ -24,10 +24,22 @@ main {
     padding: 2rem;
 }
 
-.car_form {
+.add_car {
+    align-items: center
+}
+
+.car_form{
     display: flex;
     flex-direction: column;
     flex: 1;
+}
+
+img {
+   flex: 1;
+   /* width: 30%; */
+   padding: 5rem;
+    overflow: hidden;
+    height:min-content
 }
 
 /* add car form section */
@@ -39,6 +51,7 @@ main {
 .car_database {
     flex: 3;
     flex-direction: column;
+    /* align-items: start; */
 }
 
 .car_form label {
