--- a/cars_databases/style.css
+++ b/cars_databases/style.css
@@ -5,9 +5,46 @@
     box-sizing: border-box;
 }
 
+@keyframes animatedBackground {
+    from {
+        background-position: -4.4% bottom;
+    }
+
+    to {
+        background-position: 104.4% bottom;
+    }
+}
+
 body {
     background: cornflowerblue;
-    padding: 3rem;
+    padding: 0 3rem 0 3rem;
+    height: 80%;
+}
+
+nav {
+    background: white;
+    border-radius: 0 0 0.5rem 0.5rem;
+    padding: 1rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+footer {
+    position: sticky;
+    bottom: 0;
+    width: 98.9vw;
+    margin-left: -3rem;
+    margin-bottom: -3rem;
+    background: transparent;
+}
+
+footer div {
+    background-image: url(assets/car_picture_small.webp);
+    background-size: 4rem;
+    background-repeat: no-repeat;
+    padding: 1rem;
+    animation: animatedBackground 13s ease-in-out infinite;
 }
 
 main {
