--- a/cars_databases/style.css
+++ b/cars_databases/style.css
@@ -116,6 +116,7 @@ img {
 .search_bar input,
 .search_bar select {
     margin-left: 0.2rem;
+    width: 8rem;
 }
 
 /* database section table */
@@ -145,4 +146,17 @@ img {
     text-align: left;
     background-color: #04AA6D;
     color: white;
+}
+
+@media only screen and (max-width: 800px) {
+.search_bar input,
+    .search_bar select {
+        margin-left: 0.2rem;
+        width: 5rem;
+    }
+
+img {
+    display: none;
+    width: 30%;
+}
 }
