--- a/cars_databases/style.css
+++ b/cars_databases/style.css
@@ -19,6 +19,7 @@ body {
     background: cornflowerblue;
     padding: 0 3rem 0 3rem;
     height: 80%;
+    font-family: Impact, sans-serif;
 }
 
 nav {
