--- a/CSS_tricks/style.css
+++ b/CSS_tricks/style.css
@@ -76,4 +76,11 @@ button {
     position: fixed;
     bottom: 2rem;
     right: 2rem;
+    display: none;
+}
+
+.bg {
+    background-color: white;
+    font-size: 1rem;
+    color: grey;
 }
