--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overscroll-behavior: none;
 }
 
 @font-face {
@@ -27,15 +28,162 @@
     --background-color: #DEDBD2;
     --main-font: 'Montserrat', Helvetica, sans-serif;
     --second-font: 'Inconsolata', Courier, monospace;
-    
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li {
+    list-style: none;
+}
+
+h2 {
+    font-size: 2.5rem;
+    padding: 1rem;
+}
+
+p {
+    font-family: var(--second-font);
+}
+
+html {
+    display: flex;
+    justify-content: center;
 }
 
 body {
     background-color: #DEDBD2;
     font-family: var(--main-font);
     font-size: 18px;
-    max-width: 1200px;
+    max-width: 1000px;
+    flex-direction: column;
+    color: var(--dark-color);
+}
+
+/* header */
+header {
+    background-color: var(--secondary-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+    color: var(--light-color);
+}
+
+header container {
+    display: flex;
+    align-items: center;
+}
+
+header container img {
+    height: 4rem;
+}
+
+nav ul {
+    display: flex;
+}
+
+nav ul li a {
+    padding: 0.5rem;
+}
+
+/* main */
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+section {
+    background-color: var(--primary-color);
+    display: flex;
+    padding: 3rem;
+    width: 100%;
+}
+
+/* hero section */
+#hero {
+    align-items: center;
+    justify-content: space-between;
+    padding: 5rem;
+    margin-bottom: 5rem;
+    border-radius: 0 0 0.2rem 0.2rem;
+}
+
+#hero h1 {
+    font-size: 2.5rem;
+    margin: 1.5rem 0 1.5rem 0;
+}
+
+.hero_img {
+    width: 25rem;
+}
+
+.contact_button {
+    background-color: var(--secondary-color);
+    border: 0;
+    border-radius: 2px;
+    padding: 0.5rem;
+    font-family: var(--second-font);
+    font-weight: bold;
+    font-size: 20px;
+    color: var(--tetriary-color);
+    display: flex;
+    align-items: center;
+    padding: 0.7rem;
+}
+
+.contact_button img {
+    width: 20px;
+    margin-right: 0.5rem;
+}
+
+/* skills section */
+#skills {
+    margin-bottom: 7rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    border-radius: 0.2rem;
+}
+
+#skills ul {
+    display: flex;
+    gap: 2rem;
+}
+
+.skill_card {
+    flex: 1;
+    background-color: var(--background-color);
+    border-radius: 2rem;
+    overflow: hidden;
+}
+
+.skill_card_header {
+    padding: 1.5rem;
+    background-color: var(--tetriary-color);
+    height: 4.5rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.skill_card_main {
+    padding: 1.5rem;
+    font-size: 0.8rem;
+    line-height: 1.8;
+    height: 10rem;
+}
+
+.skill_card_icons {
+    padding: 1.2rem;
+    background-color: var(--secondary-color);
+}
+
+.skill_card_icons img {
+    width: 1.9rem;
+}
+
+/* about me section */
