--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -157,7 +157,7 @@ section {
 .skill_card {
     flex: 1;
     background-color: var(--background-color);
-    border-radius: 2rem;
+    border-radius: 0.75rem;
     overflow: hidden;
 }
 
@@ -218,3 +218,62 @@ section {
 }
 
 /* resume sections */
+#resume {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 7rem;
+    background-color: transparent;
+}
+
+#resume container {
+    display: grid;
+    grid: 1fr 1fr / 1fr 1fr;
+    gap: 1rem;
+}
+
+.resume_card {
+    border-radius: 0.5rem;
+    overflow: hidden;
+    box-shadow: 0 0 5px gray;
+}
+
+.resume_header {
+    background-color: rgb(214, 214, 214);
+    padding: 1.5rem;
+}
+
+.resume_header div:first-child {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.3rem;
+    height: 2rem;
+}
+
+.resume_logo_container {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+#resume img {
+    width: 25px;
+}
+
+.resume_main {
+    background-color: var(--primary-color);
+    height: 100%;
+    padding: 1.5rem;
+}
+
+.resume_decoration {
+    background-color: var(--tetriary-color);
+    border-radius: 1rem;
+    position: absolute;
+    margin-top: -1.5rem;
+    height: 35rem;
+    width: 50rem;
+    z-index: -1;
+}
+
+/* projects section */
