--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -143,7 +143,7 @@ section {
 
 /* skills section */
 #skills {
-    margin-bottom: 7rem;
+    margin-bottom: 11rem;
     padding-top: 6rem;
     padding-bottom: 6rem;
     border-radius: 0.2rem;
@@ -222,7 +222,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 7rem;
+    margin-bottom: 5rem;
     background-color: transparent;
 }
 
@@ -277,3 +277,39 @@ section {
 }
 
 /* projects section */
+#projects {
+    background-color: transparent;
+}
+
+#projects container {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    gap: 2rem;
+}
+
+#projects img {
+    background-color: var(--primary-color);
+    width: 100%;
+    height: 20rem;
+    border-radius: 0.5rem;
+}
+
+.projects_main {
+    padding: 1rem;
+    line-height: 1.5;
+}
+
+.project_link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.projects_main p {
+    font-size: 1rem;
+}
+
+.projects_main h4 {
+    margin-bottom: 0.5rem;
+}
