--- a/style.css
+++ b/style.css
@@ -166,17 +166,23 @@ section {
     padding: 0 1rem 0 1rem;
     display: inline-block;
     border-radius: 0 0 4px 4px;
+    position: absolute;
 }
 
 .contact_icons div {
     display: flex;
     align-items: center;
-    gap: 0.7rem;
+    gap: 0.9rem;
     font-size: 2.1rem;
+    padding: 0.3rem;
 }
 
 .contact_icons span {
     font-size: 3rem !important;
+}
+
+.hidden {
+    display: none;
 }
 
 
@@ -397,4 +403,8 @@ section {
 
 footer span {
     font-size: 3rem !important;
+}
+
+footer container p:last-child {
+    margin-left: 1rem;
 }
