--- a/style.css
+++ b/style.css
@@ -408,3 +408,10 @@ footer span {
 footer container p:last-child {
     margin-left: 1rem;
 }
+
+#back_to_top {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    gap: 0.5rem
+}
