--- a/style.css
+++ b/style.css
@@ -80,17 +80,38 @@ footer container {
     align-items: center;
 }
 
+header container:hover img,
+footer container:hover img {
+    filter: drop-shadow(5px 0 6px var(--tetriary-color));
+    scale: 1.1;
+}
+
+header container:hover div,
+header container:hover div {
+    filter: drop-shadow(3px 0 3px #EDAFB890);
+}
+
 header container img,
 footer container img {
+    filter: drop-shadow(5px 0 6px #EDAFB860);
     height: 4rem;
 }
 
 nav ul {
     display: flex;
+    align-items: center;
+}
+
+nav ul li {
+    position: relative;
 }
 
 nav ul li a {
     padding: 0.5rem;
+}
+
+nav ul li:last-child a {
+    font-size: 2rem;
 }
 
 .header_icons {
@@ -102,6 +123,40 @@ nav ul li a {
 
 .header_icons a {
     padding: 0;
+}
+
+/* hover animation on nav link */
+/* left side */
+nav ul li a::before {
+    content: "";
+    /* must define content even if empty for sudo elements */
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 100%;
+    border-left: 3px solid var(--tetriary-color);
+    transition: all 1s;
+}
+
+nav ul li:hover a::before {
+    bottom: 0;
+}
+
+/* right side */
+nav ul li a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    bottom: 0;
+    border-right: 3px solid var(--tetriary-color);
+    transition: all 1s;
+}
+
+nav ul li:hover a::after {
+    top: 0;
 }
 
 /* main */
@@ -121,6 +176,24 @@ section {
     display: flex;
     padding: 3rem;
     width: 100%;
+}
+
+nav ul li:last-child a::before,
+nav ul li:last-child a::after {
+    display: none;
+}
+
+nav ul li a:hover,
+footer div a:hover,
+.contact_icons div a:hover {
+    color: var(--tetriary-color);
+}
+
+nav ul li:last-child a:hover,
+footer div a:hover,
+.contact_icons div a:hover,
+.skill_card_icons img:hover {
+    scale: 1.2;
 }
 
 /* hero section */
@@ -154,6 +227,11 @@ section {
     display: flex;
     align-items: center;
     padding: 0.7rem;
+}
+
+.contact_button:hover  {
+    scale: 1.05;
+    box-shadow: 0 0 8px var(--tetriary-color);
 }
 
 .contact_button img {
@@ -307,6 +385,15 @@ section {
     border-radius: 2%;
     box-shadow: 0 0 20px var(--secondary-color);
     border: 5px dashed var(--secondary-color);
+    transition: 1s ease-in-out;
+}
+
+.about_me_img:hover {
+    scale: 1.05;
+    rotate: 2deg;
+    box-shadow: 0 0 20px var(--tetriary-color);
+    transition: 1s ease-in-out;
+    border: 5px dashed var(--dark-color);
 }
 
 #about_me container {
@@ -413,5 +500,6 @@ footer container p:last-child {
     position: fixed;
     bottom: 2rem;
     right: 2rem;
-    gap: 0.5rem
+    gap: 0.5rem;
+    cursor: pointer;
 }
