--- a/style.css
+++ b/style.css
@@ -125,6 +125,14 @@ nav ul li:last-child a {
     padding: 0;
 }
 
+.hamburger_menu {
+    display: none;
+    border: none;
+    background-color: transparent;
+    font-size: 2rem;
+    color: var(--light-color);
+}
+
 /* hover animation on nav link */
 /* left side */
 nav ul li a::before {
@@ -200,7 +208,7 @@ footer div a:hover,
 #hero {
     align-items: center;
     justify-content: space-between;
-    padding: 5rem;
+    padding: 5rem auto;
     height: 100vh;
     padding-bottom: 15rem;
     border-radius: 0 0 0.2rem 0.2rem;
@@ -314,7 +322,9 @@ footer div a:hover,
 
 .skill_card {
     flex: 1;
-    background-color: var(--background-color);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(180deg, var(--background-color) 80%, var(--secondary-color) 81%);
+    /* to cover up the icon div shrinking and show background */
     border-radius: 0.75rem;
     overflow: hidden;
     transition: 1s ease-in-out;
@@ -342,7 +352,7 @@ footer div a:hover,
     padding: 1.5rem;
     font-size: 0.8rem;
     line-height: 1.8;
-    height: 10rem;
+    height: 12rem;
 }
 
 .skill_card_icons {
@@ -360,7 +370,7 @@ footer div a:hover,
     flex-direction: column;
     align-items: center;
     margin-bottom: 5rem;
-    background: transparent;
+    background: none;
 }
 
 #resume container {
@@ -546,4 +556,121 @@ footer container p:last-child {
     right: 2rem;
     gap: 0.5rem;
     cursor: pointer;
+}
+
+    
+@media (max-width: 1000px) {
+html {
+    font-size: 14px;
+}
+
+.hero_img_container img {
+    margin-top: 4rem;
+}
+
+#skills {
+    border-radius: none;
+    height: auto;
+    justify-content: center;
+}
+
+#skills ul {
+    flex-direction: column;
+    display: flex;
+}
+
+#resume {
+    background: var(--tetriary-color);
+}
+
+#resume container {
+    grid: 1fr 1fr / 1fr;
+}
+
+.resume_decoration {
+    display: none;
+}
+
+#about_me {
+    gap: 1rem;
+    flex-direction: column;
+    align-items: center;
+    }
+
+#about_me container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#about_me h2 {
+    text-align: center;
+}
+
+#about_me .contact_icons {
+    position:relative;
+}
+
+#projects container {
+    grid-template-columns: 1fr;
+}
+}
+
+@media screen and (max-width: 768px) {
+#hero {
+    justify-content: center;
+    padding: 3rem 0 3rem 1rem;
+    height: auto;
+}
+
+.hero_img_container {
+    display: none;
+}
+
+section {
+    padding: 0rem;
+}
+
+nav {
+    display: none;
+}
+
+.hamburger_menu {
+    display: block;
+    padding-right: 0.5rem;
+}
+
+header {
+    display: grid;
+    grid: auto auto / auto auto;
+    justify-items: end;
+    /* padding-right: 1rem; */
+}
+
+nav.responsive {
+    grid-column-start: 2;
+    display: flex;
+}
+
+nav ul{
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    padding-right: 0;
+}
+
+footer {
+    flex-direction: column;
+    padding: 0;
+}
+
+footer container {
+    display: flex;
+    flex-direction: column;
+}
+
+footer container p:last-child {
+    margin: 0.5rem 0 0.5rem 0;
+    font-size: 0.5rem;
+}
 }
